# opensim-networking

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  TODO.txt  generate.rb  todo.txt
data/: preamble.rs
examples/: .gitignore  establish-circuit.rs  establish-circuit.toml.tpl  extract_layerdata.rs  extract_objectupdate.rs
generate/: README.md  generate.rb  preamble.rs  rustfmt.toml
generate/src/: parser.rb  types.rb
llsd/: Cargo.toml  README.md
llsd/src/: autodetect.rs  binary.rs  data.rs  lib.rs  llsd.rs  xml.rs
opensim_messages/: .gitmodules  Cargo.toml  README.md
opensim_messages/generator/: .gitignore  README.md  generate.py  generate.rb  preamble.rs  rustfmt.toml  update.sh
opensim_messages/generator/src/: parser.rb
opensim_messages/src/: all.rs  errors.rs  lib.rs
opensim_types/: Cargo.toml
opensim_types/src/: lib.rs
src/: capabilities.rs  circuit.rs  coordinates.rs  grid_map.rs  lib.rs  logging.rs  login.rs  messages.rs  object_update.rs  packet.rs  simulator.rs  util.rs
src/circuit/: ack_manager.rs  handlers.rs  message_handlers.rs  mod.rs  status.rs
src/data/: mod.rs  region_info.rs
src/layer_data/: bitsreader.rs  dct.rs  extractor.rs  idct.rs  land.rs  mod.rs  reader.rs
src/services/: mod.rs  region_handle.rs  terrain.rs
src/services/generic/: lookup.rs
src/simulator/: manager.rs  mod.rs
src/systems/: agent_update.rs  initiation.rs  mod.rs
src/textures/: cache.rs  decode.rs  mod.rs
src/util/: addressable_queue.rs  bitsreader.rs  mod.rs  tests.rs
tests/: regressions.rs
