[package]
name = "opensim_networking"
version = "0.1.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "GPL-3.0"

[workspace]
members = ["opensim_messages", "opensim_types"]

[dependencies]
opensim_messages = { path = "opensim_messages" }
opensim_types = { path = "opensim_types" }

bitflags = "1.0"
#bitreader = { git = "https://github.com/leoschwarz/bitreader", branch = "read-many" } # currently needed only for layer_data module.
bitreader = { git = "https://github.com/irauta/bitreader", branch = "master" }
byteorder = "1.0"
derive-error-chain = "0.11.0"
error-chain = "0.11.0"
futures = "0.1.10"
lazy_static = "0.2.9"
mio = "0.6"
num-traits = "0.1.40"
regex = "0.2.2"
reqwest = "0.7.3"
rust-crypto = "0.2.36"
ttl_cache = "0.2.1"
xmlrpc = "0.7.0"

[dev-dependencies]
env_logger = ""
toml = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
image = "0.17.0"
