[package]
name = "opensim_networking"
version = "0.1.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "GPL-3.0"

#[profile.rel]
# opt-level='z' minimizes binary size, however this is not available in stable rustc yet
#opt-level = 'z'
#lto = true

[workspace]
members = ["opensim_messages", "opensim_types"]

[dependencies]
addressable_queue = "0.2.0"
bitflags = "1.0"
bitreader = { git = "https://github.com/irauta/bitreader", branch = "master" }
byteorder = "1.0"
derive-error-chain = "0.11.0"
error-chain = "0.11.0"
failure = "0.1.1"
futures = "0.1.10"
futures-await = "0.1.0"
# TODO: Once futures 0.2 lands there will be ThreadExecutor.
futures-cpupool = "0.1.8"
hyper = "0.11.7"
image = "0.18.0"
jpeg2000 = "0.1.1"
lazy_static = "1.0"
llsd = { git = "https://github.com/teleportlab/llsd" }
mio = "0.6"
nalgebra = "0.14.0"
opensim_messages = { path = "opensim_messages" }
opensim_types = { path = "opensim_types" }
regex = "0.2.2"
reqwest = "0.8.1"
rust-crypto = "0.2.36"
serde = "1.0"
serde_derive = "1.0"
simple_disk_cache = "0.1"
slog = "2.0"
slog-term = "2.3"
slog-async = "2.2"
tokio-core = "0.1.10"
url = "1.2"
xmlrpc = "0.9.0"

[dev-dependencies]
env_logger = ""
toml = "0.4.5"
image = "0.18.0"
