[package]
name = "llsd"
version = "0.1.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]

[dependencies]
byteorder = "1.1.0"
chrono = "0.4.0"
data-encoding = "2.0.0"
failure = "0.1.1"
lazy_static = "1.0"
quick-xml = "0.11.0"
regex = "0.2.2"
uuid = {version = "0.5.1", features = ["use_std"]}
xml-rs = "0.7.0"
